<resources>
    <string name="app_name">ParkApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_signin">LogIn/ SignIn</string>
    <string name="register_signup">REGISTER/ SIGNUP</string>
    <string name="user_login">USER LOGIN</string>
    <string name="already_a_user_login">Already a user login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_password1">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="register_signup1">REGISTER/ SIGNUP</string>
    <string name="register_signup2">Register/ Signup</string>
    <string name="title_activity_mall">MallActivity</string>
    <string name="title_activity_stadium">StadiumActivity</string>
    <string name="title_activity_theathre">TheathreActivity</string>
    <string name="title_activity_station">StationActivity</string>
</resources>
