<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backfround_image"
    tools:context="com.abcexample.parkapp.RegisterActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:id="@+id/Linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#ffc300"
        android:elevation="0dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/RegisterHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ac7409"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:paddingTop="10dp"
            android:text="@string/register_signup1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/textviewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"
            android:textColorHint="#ffffff"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="95dp" />

        <EditText
            android:id="@+id/editTextemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"
            android:textColorHint="#ffffff"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="169dp" />

        <EditText
            android:id="@+id/editTextpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"
            android:textColorHint="#ffffff"
            android:hint="@string/enter_password1"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="229dp" />

        <EditText
            android:id="@+id/editTextrepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#ffffff"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="290dp" />

        <Button
            android:id="@+id/Registerbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#000000"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#ffffff"
            android:text="@string/register_signup2" />

        <TextView
            android:id="@+id/textViewAlreadyuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/already_a_user_login" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
